[package]
name = "ip-neigh"
version = "0.1.0"
edition = "2024"

[dependencies]
rtnetlink = { git = "https://github.com/rust-netlink/rtnetlink.git", rev = "515471f" }
netlink-sys = { version = "0.8" }
tokio = { version = "1.0.1", features = ["full"]}
futures = "0.3.11"
netlink-packet-route = {version = "0.21" }
netlink-packet-core= {version ="0.7"}
rusqlite = {version = "0.33", features = ["bundled", "time"]}
clap = { version = "4.0", default-features = false, features = ["cargo", "derive", "help", "std", "suggestions"] }
hickory-proto = { git = "https://github.com/hickory-dns/hickory-dns.git", rev = "aa26c79e24409c720c2df05c9ac724c75d4ba548"}
time = "0.3"
ubus = "0.1.6"
serde_json = "1.0.108"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
